<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>3.1.1</version> <!-- lookup parent from repository -->
  </parent>
  <groupId>se.montesmites.ekonomi</groupId>
  <artifactId>ekonomi</artifactId>
  <version>1.0-SNAPSHOT</version>
  <properties>
    <argLine>--enable-preview</argLine>
    <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
    <java.version>20</java.version>

    <javax.activation.version>1.1.1</javax.activation.version>

    <javax.jaxb.impl.version>2.3.2</javax.jaxb.impl.version>
    <javax.jaxb.version>2.3.0</javax.jaxb.version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <vaadin.version>24.0.3</vaadin.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <artifactId>vaadin-bom</artifactId>
        <groupId>com.vaadin</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>${vaadin.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <artifactId>vaadin-spring-boot-starter</artifactId>
      <groupId>com.vaadin</groupId>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <artifactId>jaxb-api</artifactId>
      <groupId>javax.xml.bind</groupId>
      <version>${javax.jaxb.version}</version>
    </dependency>
    <dependency>
      <artifactId>jaxb-core</artifactId>
      <groupId>com.sun.xml.bind</groupId>
      <version>${javax.jaxb.version}</version>
    </dependency>
    <dependency>
      <artifactId>jaxb-impl</artifactId>
      <groupId>com.sun.xml.bind</groupId>
      <version>${javax.jaxb.impl.version}</version>
    </dependency>
    <dependency>
      <artifactId>activation</artifactId>
      <groupId>javax.activation</groupId>
      <scope>runtime</scope>
      <version>${javax.activation.version}</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.liquibase</groupId>
      <artifactId>liquibase-core</artifactId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>junit-vintage-engine</artifactId>
          <groupId>org.junit.vintage</groupId>
        </exclusion>
      </exclusions>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <defaultGoal>spring-boot:run</defaultGoal>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>--enable-preview</compilerArgs>
          <release>${java.version}</release>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <groupId>org.springframework.boot</groupId>
      </plugin>
      <plugin>
        <artifactId>vaadin-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>prepare-frontend</goal>
            </goals>
          </execution>
        </executions>
        <groupId>com.vaadin</groupId>
        <version>${vaadin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.liquibase</groupId>
        <artifactId>liquibase-maven-plugin</artifactId>
        <configuration>
          <driver>org.postgresql.Driver</driver>
          <url>jdbc:postgresql://localhost:5432/accounting</url>
          <username>postgres</username>
          <password>postgres</password>
          <outputChangeLogFile>target/liquibase-outputChangeLog.xml
          </outputChangeLogFile>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <build>
        <plugins>
          <plugin>
            <artifactId>vaadin-maven-plugin</artifactId>
            <executions>
              <execution>
                <configuration>
                  <productionMode>true</productionMode>
                </configuration>
                <goals>
                  <goal>prepare-frontend</goal>
                  <goal>build-frontend</goal>
                </goals>
                <id>frontend</id>
                <phase>compile</phase>
              </execution>
            </executions>
            <groupId>com.vaadin</groupId>
            <version>${vaadin.version}</version>
          </plugin>
        </plugins>
      </build>
      <id>production</id>
    </profile>
  </profiles>
</project>
